objects/Demo_Cleanup_Event__e.object
<CustomObject>
    <description>Event generated by the batch deletion of records by the Demo Cleanup Lightning component.</description>
    <fields>
        <fullName>Error_JSON_String__c</fullName>
        <description>A string containing a JSON array of objects containing error information.</description>
        <label>Error JSON String</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Finished__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the demo cleanup task is finished, false otherwise.</description>
        <label>Finished</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <description>The API name of the object whose records are being deleted.</description>
        <label>Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Id__c</fullName>
        <description>The record ID of the demo cleanup task.</description>
        <label>Task Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Errors__c</fullName>
        <description>The total number of errors so far.</description>
        <label>Total Errors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Records_Deleted__c</fullName>
        <description>The total number of records that have been deleted so far.</description>
        <label>Total Records Deleted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Records_with_Errors__c</fullName>
        <description>The total number of records that had errors so far. This is different from Total_Errors__c since a single row can have multiple errors.</description>
        <label>Total Records with Errors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Demo Cleanup Event</label>
    <pluralLabel>Demo Cleanup Events</pluralLabel>
</CustomObject>